--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "bootstrap": "~3.3.6",
     "jquery": "~2.2.1",
     "angular": "~1.5.0",
-    "angular-resource": "~1.5.0",
-    "font-awesome": "fontawesome#~4.5.0"
+    "font-awesome": "fontawesome#~4.5.0",
+    "angular-route": "~1.5.0",
+    "angular-local-storage": "~0.2.5"
   }
 }
