--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "angular": "~1.5.0",
     "font-awesome": "fontawesome#~4.5.0",
     "angular-route": "~1.5.0",
-    "angular-local-storage": "~0.2.5"
+    "angular-local-storage": "~0.2.5",
+    "angular-ui-mask": "^1.8.1"
   }
 }
