--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,12 @@
     "angular": "~1.5.0",
     "font-awesome": "fontawesome#~4.5.0",
     "angular-route": "~1.5.0",
-    "angular-local-storage": "~0.2.5"
+    "angular-local-storage": "~0.2.5",
+    "angular-mocks": "~1.5.0",
+    "angular-datatables": "^0.5.3",
+    "angular-resource": "^1.5.3"
+  },
+  "devDependencies": {
+    "jasmine-core": "jasmine#~2.4.1"
   }
 }
